# kinaxis-web-service

./: .gitignore  README.md  conversion_rate.py  kinaxis_data_upload.py  main.py  pyproject.toml  settings.py
DataExtractServices/: CurrencyXChangeRateService.py  DataExtractServiceBase.py  initial_currency_payload.json
KinaxisWebServices/: KinaxisWebServices.py
Tests/: test_CurrencyXChangeRateService.py
