[tool.poetry]
name = "kinaxis-web-service"
version = "0.1.0"
description = ""
authors = ["Mauricio <mauricio_alves@msn.com>"]
readme = "README.md"
packages = [{include = "kinaxis_web_service"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
